index.htm, styles.css:  changed class  name main_table to main_content to better describe its use styles.css: fixed bug with unclickable menu items, by adding a z-index of 1 to menu_items. The table_heading was in front of them before.

--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -13,18 +13,6 @@
 	src: url('../fonts/Fineliner%20Script.otf');
 }
 
-/** {*/
-/*font-family: Arial, sans-serif;*/
-/*}*/
-
-.test {
-	border: 1px dashed white;
-	height: 66%;
-}
-
-.image_test {
-}
-
 /* ### Headings ### */
 
 .table_heading {
@@ -88,17 +76,23 @@ body {
 	width: 100%;
 }
 
-/* ### Menu ### */
+/* ### Main Menu ### */
+
+.main_menu {
+	position: relative;
+}
 
 .menu_items {
+	display: inline-block;
 	position: absolute;
 	text-decoration: underline;
-	font-family: Angry_Chalk;
+	font-family: Angry_Chalk, sans-serif;
 	font-size: 25px;
 	font-weight: bold;
 	line-height: 30px;
 	color: white;
 	border-bottom: solid 1px #FFFFFF;
+	z-index: 1;
 }
 
 #profile_button {
@@ -127,12 +121,20 @@ body {
 	transform: rotate(-25deg);
 }
 
-/* ### Main Table ### */
+/* ### Main Content ### */
 
-.main_table {
+.main_content {
+	position: relative;
 	color: white;
 	margin: 60px 10px 0 -10px;
 	width: 98%;
+	height: 100%;
+}
+
+/* ### Main Table ### */
+
+.main_table {
+
 }
 
 .main_table_head {
@@ -160,7 +162,7 @@ body {
 	color: #000000;
 
 	height: 150px;
-	width: 200px;
+	width: 190px;
 	margin: 20px 3px 0 0;
 	padding: 25px;
 	z-index: 1;
